[gd_scene load_steps=17 format=2]

[ext_resource path="res://Models/Space/skybox colorful.png" type="Texture" id=1]
[ext_resource path="res://CovenantCarrier.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scene2.gd" type="Script" id=3]
[ext_resource path="res://D77TC Pelican.tscn" type="PackedScene" id=4]
[ext_resource path="res://Audio/sfx/Explosion croma key green screen with explosion sound effect!.ogg" type="AudioStream" id=5]
[ext_resource path="res://Scene2.tres" type="Animation" id=6]
[ext_resource path="res://Audio/sfx/road_load.wav" type="AudioStream" id=7]
[ext_resource path="res://Audio/Music/untitled.wav" type="AudioStream" id=8]
[ext_resource path="res://Audio/voice/2.wav" type="AudioStream" id=9]
[ext_resource path="res://Audio/voice/1.wav" type="AudioStream" id=10]
[ext_resource path="res://Audio/voice/3.wav" type="AudioStream" id=11]

[sub_resource type="PanoramaSky" id=1]
radiance_size = 6
panorama = ExtResource( 1 )

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
ambient_light_color = Color( 1, 1, 1, 1 )
dof_blur_far_distance = 144.02
dof_blur_far_transition = 600.35
dof_blur_far_amount = 0.0
dof_blur_far_quality = 2
glow_enabled = true
glow_levels/2 = true
glow_levels/3 = false
glow_intensity = 0.45
glow_strength = 1.88093
glow_blend_mode = 0
glow_hdr_threshold = 0.0
adjustment_enabled = true
adjustment_contrast = 1.09

[sub_resource type="Animation" id=3]
resource_name = "covcam"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Covcam:translation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 51.5796, 1.27896, -10.1176 ), Vector3( 200, 50, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Covcam:rotation_degrees")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 148.598, 0 ), Vector3( -30, 100, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("WorldEnvironment:environment:glow_strength")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 2.0, 0.87 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Covcam:fov")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( -0.1, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 179.0, 70.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("voice3:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=4]
length = 2.0

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [  ],
"loop": false,
"name": "New Anim",
"speed": 12.0
} ]

[node name="Scene2" type="Spatial"]
script = ExtResource( 3 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="D77TC Pelican" parent="." instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.95275 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, -0.496944, 0.867783, 0, -0.867783, -0.496944, 0, 16.1127, -59.657 )

[node name="Pelicancam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.95138, 0.308021, 0, -0.308021, 0.95138, 0, 4.45571, 8.572 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Scene2Intro = ExtResource( 6 )
anims/covcam = SubResource( 3 )
"anims/slipspace fade" = SubResource( 4 )

[node name="CovenantCarrier" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.0519604, 0, 0.497293, 0, 0.5, 0, -0.497293, 0, 0.0519604, -6.97063, -35.3279, 539.735 )

[node name="Covcam" type="Camera" parent="."]
transform = Transform( -0.846237, -0.00455368, 0.532787, 0, 0.999963, 0.0085466, -0.532806, 0.00723245, -0.846206, 54.0023, 2.07423, -9.78922 )
fov = 138.016
far = 8192.0

[node name="slipspacesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="idlesound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 61.256 )
pixel_size = 1.0
frames = SubResource( 5 )
animation = "New Anim"

[node name="suspense" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="voice1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = 10.0

[node name="voice2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 10.0

[node name="voice3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
volume_db = 10.0
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
